code25_all/scala/8861059.txt
scala> val s = 7.toBinayString 
<console>:7: error: value toBinayString is not a member of Int
       val s = 7.toBinayString 
                 ^

scala> val k = 7
k: Int = 7
scala> k.toBinaryString 
res44: String = 111

